feat: add modular system email and password recovery
